# supreme-spork

./: .dockerignore  .gitignore  test.ipynb
src/: compose.yaml
src/backend/: Dockerfile  compose.yaml  pyproject.toml  requeriments.txt
src/backend/app/: db.py  main.ipynb  main.py  models.py  routes  routes.py
src/backend/app/front/: front.py
src/backend/app/internal/: admin.py
src/backend/app/routers/: items.py  security_test.py  test.py
src/backend/templates/: base.html  index.html  item.html
src/backend/test/: create_item_test.py
src/nginx/: nginx.conf
