[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["JotaFab <fabrizioore512@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
hypercorn = "^0.15.0"
redis = "^5.0.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
